--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   step_progress_indicator: ^1.0.2
   syncfusion_flutter_charts: ^27.1.48
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
